--- a/Testing/testing-app/src/app/app.component.html
+++ b/Testing/testing-app/src/app/app.component.html
@@ -1,2 +1,4 @@
 <app-helloworld-component></app-helloworld-component>
 <!css selector to show components>
+<app-text-interpolation></app-text-interpolation>
+<!css selector to show text interpolation component>
