@input component communication
demonstrate communication between child/parent components

--- a/Testing/testing-app/src/app/app.component.html
+++ b/Testing/testing-app/src/app/app.component.html
@@ -2,3 +2,5 @@
 <!css selector to show components>
 <app-text-interpolation></app-text-interpolation>
 <!css selector to show text interpolation component>
+<app-parent></app-parent>
+<!css selector to show communication between child and parent components>
