--- a/Testing/testing-app/src/app/helloworld-component/helloworld-component.component.css
+++ b/Testing/testing-app/src/app/helloworld-component/helloworld-component.component.css
@@ -1,3 +1,10 @@
 .prop-access-test{
   color: blue;
 }
+/*special selectors*/
+/*host sudo class selector to target styles elements
+that hosts the component*/
+:host {
+  display: block;
+  border: 3px solid black;
+}
