ng conent with multiple selectors

--- a/Testing/testing-app/src/app/app.component.html
+++ b/Testing/testing-app/src/app/app.component.html
@@ -1,6 +1,5 @@
 <app-helloworld-component></app-helloworld-component>
-<!css selector to show components>
-<app-text-interpolation></app-text-interpolation>
-<!css selector to show text interpolation component>
-<app-parent></app-parent>
-<!css selector to show communication between child and parent components>
+<app-content>
+  <h1 selector1>Displaying selector 1</h1>
+  <p selector2>Displaying selector 2</p>
+</app-content>
