--- a/Testing/testing-app/src/app/content/content.component.html
+++ b/Testing/testing-app/src/app/content/content.component.html
@@ -3,4 +3,7 @@
 <li>{{date}}</li>
 <b>Date with date pipe and "|" is the pipe operator</b>
 <li>{{date | date}}</li>
-
+<b>Date with date pipe + optional parameter long</b>
+<li>{{date | date: "long"}}</li>
+<b>Date with multiple pipes(upcase and date)</b>
+<li>{{date | date | uppercase}}</li>
