implementing formalText pipe

--- a/Testing/testing-app/src/app/content/content.component.html
+++ b/Testing/testing-app/src/app/content/content.component.html
@@ -7,3 +7,7 @@
 <li>{{date | date: "long"}}</li>
 <b>Date with multiple pipes(upcase and date)</b>
 <li>{{date | date | uppercase}}</li>
+<b>Text without custom pipe</b>
+<li>{{text}}</li>
+<b>Text with custom in formalText pipe</b>
+<li>{{text | formalText}}</li>
