--- a/Testing/testing-app/src/app/app.component.html
+++ b/Testing/testing-app/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-helloworld-component></app-helloworld-component>
 <app-content>
+  <h1 class="s1">Propriety Binding</h1>
+  <h1 class="s2">Event Binding</h1>
 </app-content>
