--- a/Testing/testing-app/src/app/content/content.component.html
+++ b/Testing/testing-app/src/app/content/content.component.html
@@ -1,13 +1,15 @@
-<p>content works!</p>
-<b>Date without date pipe</b>
-<li>{{date}}</li>
-<b>Date with date pipe and "|" is the pipe operator</b>
-<li>{{date | date}}</li>
-<b>Date with date pipe + optional parameter long</b>
-<li>{{date | date: "long"}}</li>
-<b>Date with multiple pipes(upcase and date)</b>
-<li>{{date | date | uppercase}}</li>
-<b>Text without custom pipe</b>
-<li>{{text}}</li>
-<b>Text with custom in formalText pipe</b>
-<li>{{text | formalText}}</li>
+<ng-content select=".s1"></ng-content>
+<b></b>
+<li></li>
+<b></b>
+<li></li>
+<b></b>
+<li></li>
+
+<ng-content select=".s2"></ng-content>
+<b></b>
+<li></li>
+<b></b>
+<li></li>
+<b></b>
+<li></li>
