--- a/Testing/testing-app/src/app/parent/parent.component.html
+++ b/Testing/testing-app/src/app/parent/parent.component.html
@@ -1,4 +1,4 @@
-<!place child component into passed value to input proprerty in child.component.ts>
+<!place child component into passed value to input propriety in child.component.ts>
 <app-child [childMessage]="parentMsg"></app-child>
 
 <app-child (messageEvent)="receiveMessage($event)"></app-child>
