--- a/Testing/testing-app/src/app/content/content.component.html
+++ b/Testing/testing-app/src/app/content/content.component.html
@@ -4,7 +4,7 @@
 <b>Date with date pipe and "|" is the pipe operator</b>
 <li>{{date | date}}</li>
 <b>Date with date pipe + optional parameter long</b>
-<li>{{date | date: "long"}}</li>
+<li>{{date | date: "short"}}</li>
 <b>Date with multiple pipes(upcase and date)</b>
 <li>{{date | date | uppercase}}</li>
 <b>Text without custom pipe</b>
