--- a/Testing/testing-app/src/app/content/content.component.html
+++ b/Testing/testing-app/src/app/content/content.component.html
@@ -1,10 +1,8 @@
 <ng-content select=".s1"></ng-content>
-<b></b>
-<li></li>
-<b></b>
-<li></li>
-<b></b>
-<li></li>
+<h3>Button Disabled</h3>
+<button [disabled] ="isUnchanged">Disabled Button</button>
+<h3>Image Source</h3>
+<img [src]="imgURL">
 
 <ng-content select=".s2"></ng-content>
 <b></b>
