--- a/Testing/testing-app/src/app/content/content.component.html
+++ b/Testing/testing-app/src/app/content/content.component.html
@@ -5,8 +5,8 @@
 <img [src]="imgURL">
 
 <ng-content select=".s2"></ng-content>
-<b></b>
-<li></li>
+<h3>Prefix attr</h3>
+<p [attr.style]="expression"]></p>
 <b></b>
 <li></li>
 <b></b>
