--- a/Testing/testing-app/src/app/content/content.component.html
+++ b/Testing/testing-app/src/app/content/content.component.html
@@ -14,6 +14,10 @@
 <div [class]="{'newClass':false, 'anotherClass':true}">
   <p>this is insade the multiple class div</p>
 </div>
+<!style binding>
+<div [style]="divstyle">
+  <p>this is style binded</p>
+</div>
 <b></b>
 <li></li>
 <b></b>
