event binding onClick

--- a/Testing/testing-app/src/app/content/content.component.html
+++ b/Testing/testing-app/src/app/content/content.component.html
@@ -18,7 +18,8 @@
 <div [style]="divstyle">
   <p>this is style binded</p>
 </div>
-<b></b>
-<li></li>
+<ng-content select=".s3"></ng-content>
+<button (click)="onClick()">Event</button>
+
 <b></b>
 <li></li>
