--- a/Testing/testing-app/src/app/app.component.html
+++ b/Testing/testing-app/src/app/app.component.html
@@ -2,4 +2,5 @@
 <app-content>
   <h1 class="s1">Propriety Binding</h1>
   <h1 class="s2">Attribute Binding</h1>
+  <h1 class="s3">Event Binding</h1>
 </app-content>
