custom event binding

--- a/Testing/testing-app/src/app/app.component.html
+++ b/Testing/testing-app/src/app/app.component.html
@@ -3,4 +3,5 @@
   <h1 class="s1">Propriety Binding</h1>
   <h1 class="s2">Attribute Binding</h1>
   <h1 class="s3">Event Binding</h1>
+  <button class="s4" (msg)="customEventBind($event)">Custom Event</button>
 </app-content>
