--- a/Testing/testing-app/src/app/content/content.component.html
+++ b/Testing/testing-app/src/app/content/content.component.html
@@ -19,7 +19,9 @@
   <p>this is style binded</p>
 </div>
 <ng-content select=".s3"></ng-content>
+<!event binding>
 <button (click)="onClick()">Event</button>
-
+<!custom event binding>
+<ng-content select=".s4"></ng-content>
 <b></b>
 <li></li>
