--- a/Experiment/AdoptionApplication/src/app/header/header.component.css
+++ b/Experiment/AdoptionApplication/src/app/header/header.component.css
@@ -1,7 +1,8 @@
 
 .toolbar {
-  position: absolute;
+  position: fixed;
   top: 0;
+  z-index: 900;
   left: 0;
   right: 0;
   height: 80px;
@@ -10,10 +11,12 @@
   background-color: #474044;
   color: white;
   font-weight: 600;
+  box-shadow: 0px 0px 0px 0px transparent;
+  border-bottom: 1px solid transparent;
+  transition: padding 0.5s ease, background 0.5s ease, box-shadow 0.5s ease, border 0.5s ease;
 }
 
 .menu ul li {
-  color: white;
   margin: 0 10px 0 8px;
   font-size: 18px;
   list-style-type: none;
@@ -21,7 +24,8 @@
 }
 
 .toolbar img {
-  margin: 66px 16px 0;
+  margin: 75px 16px 0;
+  filter: drop-shadow(0px 1px 1px black);
 }
 
 .toolbar span {
@@ -46,4 +50,12 @@
 
 .spacer {
   flex: 1;
+}
+
+.followingToolbar{
+  padding: 0em 0em;
+  background-color: #FFFFFF;
+  border-bottom: 1px solid #DDDDDD;
+  box-shadow: 0px 2px 3px rgb(0 0 0 / 4%);
+  color: black;
 }
