cleanup app component

--- a/Experiment/AdoptionApplication/src/app/app.component.html
+++ b/Experiment/AdoptionApplication/src/app/app.component.html
@@ -1,29 +1,10 @@
 
-<!-- * * * * * * * * * * * Comment here * * * * * * * * * * * -->
+<!-- * * navbar * * -->
 
 <app-header></app-header>
 
-
-
-<div class="content" role="main">
-  <div class="ui container">
-    here is a container
-  </div>
-  <footer>
-    <table class="ui table">
-      <tr>
-        <th>
-          table header
-        </th>
-      </tr>
-      <tr>
-        <td>
-          data
-        </td>
-      </tr>
-    </table>
-  </footer>
-
-</div>
-
 <router-outlet></router-outlet>
+
+<!-- * * footer * * -->
+
+<app-footer></app-footer>
