styles and routes

--- a/Experiment/AdoptionApplication/src/app/header/header.component.css
+++ b/Experiment/AdoptionApplication/src/app/header/header.component.css
@@ -9,11 +9,14 @@
   display: flex;
   align-items: center;
   background-color: #474044;
-  color: white;
-  font-weight: 600;
   box-shadow: 0px 0px 0px 0px transparent;
   border-bottom: 1px solid transparent;
   transition: padding 0.5s ease, background 0.5s ease, box-shadow 0.5s ease, border 0.5s ease;
+}
+
+.menu a{
+  color: #FFFFFF;
+  font-weight: 600;
 }
 
 .menu ul li {
@@ -28,24 +31,20 @@
   filter: drop-shadow(0px 1px 1px black);
 }
 
+img:hover{
+  cursor: pointer;
+}
+
 .toolbar span {
   font-size: 42px;
+  color: #FFFFFF;
 }
 
 
-.toolbar #twitter-logo {
-  height: 40px;
-  margin: 0 8px;
-}
-
-.toolbar #youtube-logo {
-  height: 40px;
-  margin: 0 16px;
-}
-
-.toolbar #twitter-logo:hover,
-.toolbar #youtube-logo:hover {
+.toolbar span:hover,
+.toolbar a:hover {
   opacity: 0.8;
+  cursor: pointer;
 }
 
 .spacer {
