--- a/Experiment/AdoptionApplication/src/app/header/header.component.html
+++ b/Experiment/AdoptionApplication/src/app/header/header.component.html
@@ -4,16 +4,20 @@
       width="140"
       alt="Life Saver Logo"
       src="/assets/logos/logo.png"
+      routerLink=""
     />
   </div>
-  <span>LIFE SAVER</span>
+  <span
+  routerLink="">
+    LIFE SAVER
+  </span>
   <div class="spacer"></div>
   <div class="menu">
     <ul>
-      <li>DOG ADOPTION</li>
-      <li>CAT ADOPTION</li>
-      <li>PET CARE</li>
-      <li>ABOUT US</li>
+      <li><a routerLink="dog-adoption" href="#">DOG ADOPTION</a></li>
+      <li><a routerLink="cat-adoption" href="#">CAT ADOPTION</a></li>
+      <li><a routerLink="pet-care" href="#">PET CARE</a></li>
+      <li><a routerLink="about" href="#">ABOUT US</a></li>
     </ul>
   </div>
 </div>
