--- a/Experiment/AdoptionApplication/src/app/footer/footer.component.html
+++ b/Experiment/AdoptionApplication/src/app/footer/footer.component.html
@@ -1,1 +1,17 @@
-<p>footer works!</p>
+<div class="container-fluid footer mt-5">
+  <div class="row">
+    <!-- name  -->
+    <div class="col-lg-6 mt-3 mb-3">
+      <h1>LIFE SAVER</h1>
+      <p>Thank you for saving lives</p>
+    </div>
+    <!-- nav  -->
+    <div class="col-lg-5 mt-3 mb-3">
+      <a routerLink="">Home</a>
+      <a routerLink="dog-adoption">Adopting Dogs</a>
+      <a routerLink="cat-adoption">Adopting Cats</a>
+      <a routerLink="pet-care">Pet Care</a>
+      <a routerLink="about">About us</a>
+    </div>
+  </div>
+</div>
