--- a/Experiment/AdoptionApplication/src/app/header/header.component.css
+++ b/Experiment/AdoptionApplication/src/app/header/header.component.css
@@ -1,3 +1,7 @@
+.menu a{
+  font-weight: 600;
+  color: #FFFFFF;
+}
 
 .toolbar {
   position: fixed;
@@ -12,11 +16,7 @@
   box-shadow: 0px 0px 0px 0px transparent;
   border-bottom: 1px solid transparent;
   transition: padding 0.5s ease, background 0.5s ease, box-shadow 0.5s ease, border 0.5s ease;
-}
-
-.menu a{
-  color: #FFFFFF;
-  font-weight: 600;
+  color: white;
 }
 
 .menu ul li {
@@ -37,7 +37,6 @@ img:hover{
 
 .toolbar span {
   font-size: 42px;
-  color: #FFFFFF;
 }
 
 
@@ -56,5 +55,9 @@ img:hover{
   background-color: #FFFFFF;
   border-bottom: 1px solid #DDDDDD;
   box-shadow: 0px 2px 3px rgb(0 0 0 / 4%);
+  color: black;
+}
+
+.followingToolbar a{
   color: black;
 }
