--- a/Experiment/AdoptionApplication/src/app/header/header.component.css
+++ b/Experiment/AdoptionApplication/src/app/header/header.component.css
@@ -12,7 +12,7 @@
   height: 80px;
   display: flex;
   align-items: center;
-  background-color: #474044;
+  background-color: black;
   box-shadow: 0px 0px 0px 0px transparent;
   border-bottom: 1px solid transparent;
   transition: padding 0.5s ease, background 0.5s ease, box-shadow 0.5s ease, border 0.5s ease;
