--- a/Experiment/AdoptionApplication/src/app/slider/slider.component.html
+++ b/Experiment/AdoptionApplication/src/app/slider/slider.component.html
@@ -1,32 +1,34 @@
-<div class="slider">
-  <div class="slides">
-    <input type="radio" name="radio-btn" id="radio1">
-    <input type="radio" name="radio-btn" id="radio2">
-    <input type="radio" name="radio-btn" id="radio3">
-    <input type="radio" name="radio-btn" id="radio4">
-    <div class="slide first">
-      <img src="/assets/home/home-background1.jpg" alt="">
+<div class="body">
+  <div class="slider">
+    <div class="slides">
+      <input type="radio" name="radio-btn" id="radio1">
+      <input type="radio" name="radio-btn" id="radio2">
+      <input type="radio" name="radio-btn" id="radio3">
+      <input type="radio" name="radio-btn" id="radio4">
+      <div class="slide first">
+        <img src="/assets/home/home-background1.jpg" alt="">
+      </div>
+      <div class="slide">
+        <img src="/assets/home/home-background2.jpg" alt="">
+      </div>
+      <div class="slide">
+        <img src="/assets/home/home-background3.jpg" alt="">
+      </div>
+      <div class="slide">
+        <img src="/assets/home/home-background4.jpg" alt="">
+      </div>
+      <div class="navigation-auto">
+        <div class="auto-btn1"></div>
+        <div class="auto-btn2"></div>
+        <div class="auto-btn3"></div>
+        <div class="auto-btn4"></div>
+      </div>
     </div>
-    <div class="slide">
-      <img src="/assets/home/home-background2.jpg" alt="">
+    <div class="navigation-manual">
+      <label for="radio1" class="manual-btn"></label>
+      <label for="radio2" class="manual-btn"></label>
+      <label for="radio3" class="manual-btn"></label>
+      <label for="radio4" class="manual-btn"></label>
     </div>
-    <div class="slide">
-      <img src="/assets/home/home-background3.jpg" alt="">
-    </div>
-    <div class="slide">
-      <img src="/assets/home/home-background4.jpg" alt="">
-    </div>
-    <div class="navigation-auto">
-      <div class="auto-btn1"></div>
-      <div class="auto-btn2"></div>
-      <div class="auto-btn3"></div>
-      <div class="auto-btn4"></div>
-    </div>
-  </div>
-  <div class="navigation-manual">
-    <label for="radio1" class="manual-btn"></label>
-    <label for="radio2" class="manual-btn"></label>
-    <label for="radio3" class="manual-btn"></label>
-    <label for="radio4" class="manual-btn"></label>
   </div>
 </div>
