--- a/Experiment/AdoptionApplication/src/app/header/header.component.css
+++ b/Experiment/AdoptionApplication/src/app/header/header.component.css
@@ -9,7 +9,7 @@
   z-index: 900;
   left: 0;
   right: 0;
-  height: 80px;
+  height: 100px;
   display: flex;
   align-items: center;
   background-color: black;
@@ -20,8 +20,8 @@
 }
 
 .menu ul li {
-  margin: 0 10px 0 8px;
-  font-size: 18px;
+  margin: 25px 20px 0 8px;
+  font-size: 26px;
   list-style-type: none;
   display: inline-block;
 }
