--- a/Experiment/AdoptionApplication/src/app/slider/slider.component.css
+++ b/Experiment/AdoptionApplication/src/app/slider/slider.component.css
@@ -20,7 +20,6 @@ img{
 
 .slides{
   width: 500%;
-  height: 500px;
   display: flex;
 }
 
@@ -29,7 +28,8 @@ img{
 }
 
 .slide{
-  width: 100%;
+  width: 20%;
+  transition: 2s;
   height: 500px;
 }
 
@@ -62,13 +62,13 @@ img{
 }
 
 #radio2:checked ~ .first{
-  margin-left: -40%;
+  margin-left: -20%;
 }
 
 #radio3:checked ~ .first{
-  margin-left: -80%;
+  margin-left: -40%;
 }
 
 #radio4:checked ~ .first{
-  margin-left: -400%;
+  margin-left: -60%;
 }
