--- a/Experiment/AdoptionApplication/src/app/pages/home/home.component.html
+++ b/Experiment/AdoptionApplication/src/app/pages/home/home.component.html
@@ -1,1 +1,15 @@
 <app-slider></app-slider>
+<app-testimonial>
+    <div paragraph>
+        <h1>
+            Jay was the missing piece of puzzle to our family
+        </h1>
+        <p>
+            I have been feeling accomplishment and a tremendous amount of
+            joy. It's been an amazing experience since I adopted Jay
+            through Life Saver. I'm even thinking of adopting another
+            dog to keep him company.
+        </p>
+    </div>
+    <img image style="max-width: 500px;" src="../assets/home/testimonial/testimonial1.jpg" alt="">
+</app-testimonial>
